test version 1 tested, errors fixed
